--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <li>Communicating</li>
     </ul>
 
+    <h2>Relationship Status</h2>h2>
+    <hr />
+    <p>我好愛我男朋友黃稟豪><</p>
+
     <h2>Others</h2>
     <hr />
     <a href="./hobbies.html">Hobbies</a>
