--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li>Communicating</li>
     </ul>
 
-    <h2>Relationship Status</h2>h2>
+    <h2>Relationship Status</h2>
     <hr />
     <p>我好愛我男朋友黃稟豪><</p>
 
