--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <h2>Relationship Status</h2>
     <hr />
-    <p>我好愛我男朋友黃稟豪</p>
+    <p>I love my boyfriend!</p>
 
     <h2>Others</h2>
     <hr />
